; ModuleID = '/home/carl/AnghaBench/i3/src/extr_restore_layout.c_restore_handle_event.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_restore_layout.c_restore_handle_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [41 x i8] c"Received unhandled X11 event of type %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @restore_handle_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @restore_handle_event(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %20 [
    i32 128, label %6
    i32 129, label %17
  ]

6:                                                ; preds = %2
  %7 = load i32*, i32** %4, align 8
  %8 = bitcast i32* %7 to %struct.TYPE_3__*
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %6
  %13 = load i32*, i32** %4, align 8
  %14 = bitcast i32* %13 to %struct.TYPE_3__*
  %15 = call i32 @expose_event(%struct.TYPE_3__* %14)
  br label %16

16:                                               ; preds = %12, %6
  br label %23

17:                                               ; preds = %2
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @configure_notify(i32* %18)
  br label %23

20:                                               ; preds = %2
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @DLOG(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %20, %17, %16
  ret void
}

declare dso_local i32 @expose_event(%struct.TYPE_3__*) #1

declare dso_local i32 @configure_notify(i32*) #1

declare dso_local i32 @DLOG(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
